Updates the controls...

--- a/cjgammon/02basic3d/template.html
+++ b/cjgammon/02basic3d/template.html
@@ -124,7 +124,7 @@
       </tr>
       <tr>
         <td class='title' colspan="2">
-          LIGHTS
+          AMBIENT LIGHT
           <span
             id='lightsShower'
             class='shower'
@@ -140,46 +140,20 @@
         </td>
       </tr>
       <tr class='lights-row-attribute'>
-        <td class='title' colspan="2">
-          Ambiant Light
-        </td>
-      </tr>
-      <tr class='lights-row-attribute'>
         <td>Red</td>
-        <td><input id="light1Red" type="range" min="0" max="255" value="255"></td>
+        <td><input id="lightAmbientRed" type="range" min="0" max="255" value="255"></td>
       </tr>
       <tr class='lights-row-attribute'>
         <td>Green</td>
-        <td><input id="light1Green" type="range" min="0" max="255" value="0"></td>
+        <td><input id="lightAmbientGreen" type="range" min="0" max="255" value="0"></td>
       </tr>
       <tr class='lights-row-attribute'>
         <td>Blue</td>
-        <td><input id="light1Blue" type="range" min="0" max="255" value="0"></td>
+        <td><input id="lightAmbientBlue" type="range" min="0" max="255" value="0"></td>
       </tr>
       <tr class='lights-row-attribute'>
         <td>Intensity</td>
-        <td><input id="light1Intensity" type="range" min="1" max="100" value="50"></td>
-      </tr>
-      <tr class='lights-row-attribute'>
-        <td class='title' colspan="2">
-          Point Light
-        </td>
-      </tr>
-      <tr class='lights-row-attribute'>
-        <td>Red</td>
-        <td><input id="light2Red" type="range" min="0" max="255" value="255"></td>
-      </tr>
-      <tr class='lights-row-attribute'>
-        <td>Green</td>
-        <td><input id="light2Green" type="range" min="0" max="255" value="0"></td>
-      </tr>
-      <tr class='lights-row-attribute'>
-        <td>Blue</td>
-        <td><input id="light2Blue" type="range" min="0" max="255" value="0"></td>
-      </tr>
-      <tr class='lights-row-attribute'>
-        <td>Intensity</td>
-        <td><input id="light2Intensity" type="range" min="1" max="100" value="50"></td>
+        <td><input id="lightAmbientIntensity" type="range" min="1" max="100" value="50"></td>
       </tr>
     </table>
     <canvas id='myCanvas'></canvas>
