Changes to the control box.

--- a/cjgammon/02basic3d/template.html
+++ b/cjgammon/02basic3d/template.html
@@ -124,7 +124,7 @@
       </tr>
       <tr>
         <td class='title' colspan="2">
-          AMBIENT LIGHT
+          Ambiant Light
           <span
             id='lightsShower'
             class='shower'
@@ -155,6 +155,7 @@
         <td>Intensity</td>
         <td><input id="lightAmbientIntensity" type="range" min="1" max="100" value="50"></td>
       </tr>
+
     </table>
     <canvas id='myCanvas'></canvas>
 
